--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <title>vagent</title>
+    <style>
+      *{margin:0; padding: 0;}
+      html, body,div{ height: 100%; background-color:rgba(0,0,0,0)}
+      .root{ height: 100%; background-color: 'black'; }
+     </style>
   </head>
   <body>
     <div id="root"></div>
